fix collapsing padding

--- a/public/style.css
+++ b/public/style.css
@@ -28,7 +28,9 @@ body {
 #container {
   background-color: black;
   width: 100%;
+  height: auto;
   padding: 40px;
+  margin-bottom: 40px;
   box-sizing: border-box;
 }
 
